[package]
name = "pidtree_mon"
description = "A CPU load monitor of process trees"
authors = ["Michał Trybus <komar007@gmail.com>"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/komar007/pidtree_mon"
readme = "README.md"
documentation = "https://docs.rs/pidtree_mon"

categories = ["command-line-utilities"]
keywords = ["cpu", "process", "linux", "cli", "utility"]

version = "0.1.2"
edition = "2021"


[dependencies]
tokio = { version = "1.39", features = ["full"] }
log = "0.4"
env_logger = "0.11"
procfs = "0.16"
fork = "0.2"
daemonize = "0.5"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
futures = "0.3"
itertools = "0.13"
clap = { version = "4.5", features = [ "derive" ] }
with_daemon = "0.1"
